--- a/python_module/Practice_mtply.ipynb
+++ b/python_module/Practice_mtply.ipynb
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,22 +705,22 @@
     " seprated_list = []\n",
     " for i in lst:\n",
     "    year, month, date = i.split('-')\n",
-    "\n",
-    "    return year,month,date "
+    "    seprated_list.append((year,month,date))\n",
+    "    return seprated_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('2020', '01', '22')"
+       "[('2020', '01', '22')]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,10 +731,526 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "day_wise['Date'] = pd.to_datetime(day_wise['Date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date                      datetime64[ns]\n",
+       "Confirmed                          int64\n",
+       "Deaths                             int64\n",
+       "Recovered                          int64\n",
+       "Active                             int64\n",
+       "New cases                          int64\n",
+       "New deaths                         int64\n",
+       "New recovered                      int64\n",
+       "Deaths / 100 Cases               float64\n",
+       "Recovered / 100 Cases            float64\n",
+       "Deaths / 100 Recovered           float64\n",
+       "No. of countries                   int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day_wise.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      2020\n",
+       "1      2020\n",
+       "2      2020\n",
+       "3      2020\n",
+       "4      2020\n",
+       "       ... \n",
+       "183    2020\n",
+       "184    2020\n",
+       "185    2020\n",
+       "186    2020\n",
+       "187    2020\n",
+       "Name: Date, Length: 188, dtype: int32"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day_wise['Date'].dt.year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "day_wise['month'] = day_wise['Date'].dt.month"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      1\n",
+       "1      1\n",
+       "2      1\n",
+       "3      1\n",
+       "4      1\n",
+       "      ..\n",
+       "183    7\n",
+       "184    7\n",
+       "185    7\n",
+       "186    7\n",
+       "187    7\n",
+       "Name: Date, Length: 188, dtype: int64"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day_wise['Date'].map(lambda x:x.month)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "month\n",
+       "3    31\n",
+       "5    31\n",
+       "4    30\n",
+       "6    30\n",
+       "2    29\n",
+       "7    27\n",
+       "1    10\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day_wise['month'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000002AD632EF1D0>"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "month_group = day_wise.groupby('month')\n",
+    "month_group"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Deaths</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>month</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>46875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>397601</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4311214</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>9609604</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>13309053</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>15709667</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Deaths\n",
+       "month          \n",
+       "1           889\n",
+       "2         46875\n",
+       "3        397601\n",
+       "4       4311214\n",
+       "5       9609604\n",
+       "6      13309053\n",
+       "7      15709667"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "month_group[['Deaths']].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Confirmed</th>\n",
+       "      <th>Deaths</th>\n",
+       "      <th>Recovered</th>\n",
+       "      <th>Active</th>\n",
+       "      <th>New cases</th>\n",
+       "      <th>New deaths</th>\n",
+       "      <th>New recovered</th>\n",
+       "      <th>Deaths / 100 Cases</th>\n",
+       "      <th>Recovered / 100 Cases</th>\n",
+       "      <th>Deaths / 100 Recovered</th>\n",
+       "      <th>No. of countries</th>\n",
+       "      <th>month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-01-22</td>\n",
+       "      <td>555</td>\n",
+       "      <td>17</td>\n",
+       "      <td>28</td>\n",
+       "      <td>510</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.06</td>\n",
+       "      <td>5.05</td>\n",
+       "      <td>60.71</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-01-23</td>\n",
+       "      <td>654</td>\n",
+       "      <td>18</td>\n",
+       "      <td>30</td>\n",
+       "      <td>606</td>\n",
+       "      <td>99</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.75</td>\n",
+       "      <td>4.59</td>\n",
+       "      <td>60.00</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-01-24</td>\n",
+       "      <td>941</td>\n",
+       "      <td>26</td>\n",
+       "      <td>36</td>\n",
+       "      <td>879</td>\n",
+       "      <td>287</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2.76</td>\n",
+       "      <td>3.83</td>\n",
+       "      <td>72.22</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-01-25</td>\n",
+       "      <td>1434</td>\n",
+       "      <td>42</td>\n",
+       "      <td>39</td>\n",
+       "      <td>1353</td>\n",
+       "      <td>493</td>\n",
+       "      <td>16</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.93</td>\n",
+       "      <td>2.72</td>\n",
+       "      <td>107.69</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-01-26</td>\n",
+       "      <td>2118</td>\n",
+       "      <td>56</td>\n",
+       "      <td>52</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>684</td>\n",
+       "      <td>14</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2.64</td>\n",
+       "      <td>2.46</td>\n",
+       "      <td>107.69</td>\n",
+       "      <td>13</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>183</th>\n",
+       "      <td>2020-07-23</td>\n",
+       "      <td>15510481</td>\n",
+       "      <td>633506</td>\n",
+       "      <td>8710969</td>\n",
+       "      <td>6166006</td>\n",
+       "      <td>282756</td>\n",
+       "      <td>9966</td>\n",
+       "      <td>169714</td>\n",
+       "      <td>4.08</td>\n",
+       "      <td>56.16</td>\n",
+       "      <td>7.27</td>\n",
+       "      <td>187</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>184</th>\n",
+       "      <td>2020-07-24</td>\n",
+       "      <td>15791645</td>\n",
+       "      <td>639650</td>\n",
+       "      <td>8939705</td>\n",
+       "      <td>6212290</td>\n",
+       "      <td>281164</td>\n",
+       "      <td>6144</td>\n",
+       "      <td>228736</td>\n",
+       "      <td>4.05</td>\n",
+       "      <td>56.61</td>\n",
+       "      <td>7.16</td>\n",
+       "      <td>187</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>185</th>\n",
+       "      <td>2020-07-25</td>\n",
+       "      <td>16047190</td>\n",
+       "      <td>644517</td>\n",
+       "      <td>9158743</td>\n",
+       "      <td>6243930</td>\n",
+       "      <td>255545</td>\n",
+       "      <td>4867</td>\n",
+       "      <td>219038</td>\n",
+       "      <td>4.02</td>\n",
+       "      <td>57.07</td>\n",
+       "      <td>7.04</td>\n",
+       "      <td>187</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>186</th>\n",
+       "      <td>2020-07-26</td>\n",
+       "      <td>16251796</td>\n",
+       "      <td>648621</td>\n",
+       "      <td>9293464</td>\n",
+       "      <td>6309711</td>\n",
+       "      <td>204606</td>\n",
+       "      <td>4104</td>\n",
+       "      <td>134721</td>\n",
+       "      <td>3.99</td>\n",
+       "      <td>57.18</td>\n",
+       "      <td>6.98</td>\n",
+       "      <td>187</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>187</th>\n",
+       "      <td>2020-07-27</td>\n",
+       "      <td>16480485</td>\n",
+       "      <td>654036</td>\n",
+       "      <td>9468087</td>\n",
+       "      <td>6358362</td>\n",
+       "      <td>228693</td>\n",
+       "      <td>5415</td>\n",
+       "      <td>174623</td>\n",
+       "      <td>3.97</td>\n",
+       "      <td>57.45</td>\n",
+       "      <td>6.91</td>\n",
+       "      <td>187</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>188 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Date  Confirmed  Deaths  Recovered   Active  New cases  New deaths  \\\n",
+       "0   2020-01-22        555      17         28      510          0           0   \n",
+       "1   2020-01-23        654      18         30      606         99           1   \n",
+       "2   2020-01-24        941      26         36      879        287           8   \n",
+       "3   2020-01-25       1434      42         39     1353        493          16   \n",
+       "4   2020-01-26       2118      56         52     2010        684          14   \n",
+       "..         ...        ...     ...        ...      ...        ...         ...   \n",
+       "183 2020-07-23   15510481  633506    8710969  6166006     282756        9966   \n",
+       "184 2020-07-24   15791645  639650    8939705  6212290     281164        6144   \n",
+       "185 2020-07-25   16047190  644517    9158743  6243930     255545        4867   \n",
+       "186 2020-07-26   16251796  648621    9293464  6309711     204606        4104   \n",
+       "187 2020-07-27   16480485  654036    9468087  6358362     228693        5415   \n",
+       "\n",
+       "     New recovered  Deaths / 100 Cases  Recovered / 100 Cases  \\\n",
+       "0                0                3.06                   5.05   \n",
+       "1                2                2.75                   4.59   \n",
+       "2                6                2.76                   3.83   \n",
+       "3                3                2.93                   2.72   \n",
+       "4               13                2.64                   2.46   \n",
+       "..             ...                 ...                    ...   \n",
+       "183         169714                4.08                  56.16   \n",
+       "184         228736                4.05                  56.61   \n",
+       "185         219038                4.02                  57.07   \n",
+       "186         134721                3.99                  57.18   \n",
+       "187         174623                3.97                  57.45   \n",
+       "\n",
+       "     Deaths / 100 Recovered  No. of countries  month  \n",
+       "0                     60.71                 6      1  \n",
+       "1                     60.00                 8      1  \n",
+       "2                     72.22                 9      1  \n",
+       "3                    107.69                11      1  \n",
+       "4                    107.69                13      1  \n",
+       "..                      ...               ...    ...  \n",
+       "183                    7.27               187      7  \n",
+       "184                    7.16               187      7  \n",
+       "185                    7.04               187      7  \n",
+       "186                    6.98               187      7  \n",
+       "187                    6.91               187      7  \n",
+       "\n",
+       "[188 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day_wise"
+   ]
   }
  ],
  "metadata": {
