--- a/python_module/seaborn_revision.ipynb
+++ b/python_module/seaborn_revision.ipynb
@@ -501,6 +501,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### auto"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
