--- a/python_module/linear_regression.ipynb
+++ b/python_module/linear_regression.ipynb
@@ -1628,7 +1628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1637,7 +1637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1779,7 +1779,7 @@
        "[5859 rows x 5 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1790,7 +1790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1799,7 +1799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1808,7 +1808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2224,7 +2224,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2235,7 +2235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2244,7 +2244,7 @@
        "0.7053826605671762"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2255,7 +2255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2264,7 +2264,7 @@
        "0.7586900869386048"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2275,7 +2275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -2290,8 +2290,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9846096661304874\n",
-      "0.9016340950645264\n"
+      "0.9848207452127526\n",
+      "0.900527533182769\n"
      ]
     }
    ],
@@ -2305,7 +2305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2314,7 +2314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2323,7 +2323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2332,7 +2332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2438,7 +2438,7 @@
        "[1465 rows x 2 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2449,7 +2449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -2458,7 +2458,7 @@
        "4697994405.450356"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2469,7 +2469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2481,7 +2481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2490,7 +2490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -2499,7 +2499,7 @@
        "['linear-model.lb']"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2510,11 +2510,240 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = joblib.load('linear-model.lb')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dt = DecisionTreeClassifier(criterion=\"entropy\",splitter='random')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['RD_model.lb']"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(rd,'RD_model.lb')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>owner</th>\n",
+       "      <th>brand</th>\n",
+       "      <th>kms_driven</th>\n",
+       "      <th>age</th>\n",
+       "      <th>power</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4909</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22500.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>350.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1942</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3198.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5763</th>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>15000.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>220.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4800</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>27000.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>150.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7614</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>16764.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5653</th>\n",
+       "      <td>1</td>\n",
+       "      <td>14</td>\n",
+       "      <td>16523.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>750.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>609</th>\n",
+       "      <td>1</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2881.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>250.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4211</th>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>23833.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>150.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6379</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9282.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>647</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2980.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>160.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1465 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      owner  brand  kms_driven   age  power\n",
+       "4909      1      1     22500.0   6.0  350.0\n",
+       "1942      1      1      3198.0   5.0  500.0\n",
+       "5763      1      6     15000.0   6.0  220.0\n",
+       "4800      1      3     27000.0  12.0  150.0\n",
+       "7614      1      5     16764.0   9.0  100.0\n",
+       "...     ...    ...         ...   ...    ...\n",
+       "5653      1     14     16523.0   5.0  750.0\n",
+       "609       1     13      2881.0   7.0  250.0\n",
+       "4211      1      7     23833.0   4.0  150.0\n",
+       "6379      1      1      9282.0   7.0  500.0\n",
+       "647       1      0      2980.0   6.0  160.0\n",
+       "\n",
+       "[1465 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Jai\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\base.py:493: UserWarning: X does not have valid feature names, but RandomForestRegressor was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([109110.])"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rd.predict([[1,\t1,\t22500.0,\t6.0,\t350.0]])   #for single data point,single row we can do this process\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = joblib.load('RD_model.lb')\n"
    ]
   },
   {
