--- a/bike_prediction_project/linear_regression.ipynb
+++ b/bike_prediction_project/linear_regression.ipynb
@@ -2748,9 +2748,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "bike_numbers= {'TVS': 0,\n",
+    " 'Royal Enfield': 1,\n",
+    " 'Triumph': 2,\n",
+    " 'Yamaha': 3,\n",
+    " 'Honda': 4,\n",
+    " 'Hero': 5,\n",
+    " 'Bajaj': 6,\n",
+    " 'Suzuki': 7,\n",
+    " 'Benelli': 8,\n",
+    " 'KTM': 9,\n",
+    " 'Mahindra': 10,\n",
+    " 'Kawasaki': 11,\n",
+    " 'Ducati': 12,\n",
+    " 'Hyosung': 13,\n",
+    " 'Harley-Davidson': 14,\n",
+    " 'Jawa': 15,\n",
+    " 'BMW': 16,\n",
+    " 'Indian': 17,\n",
+    " 'Rajdoot': 18,\n",
+    " 'LML': 19,\n",
+    " 'Yezdi': 20,\n",
+    " 'MV': 21,\n",
+    " 'Ideal': 22}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
